--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "date-fns": "^2.0.0-beta.5",
     "react": "^16.10.2",
     "react-checkbox-group": "^5.0.2",
     "react-dom": "^16.10.2",
